package TEMA6.Empleados_Ysus_Tareas;

public class Diseniador extends Empleados {

    @Override
    public void realizarTarea(){
        System.out.println("Creando diseños gráficos y prototipos.");
    }
}
